전반적인 코드 수정하고 데이터 추가